// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventList when the data is loading renders as expected 1`] = `<WithStyles(SkeletonEvent) />`;

exports[`EventList when the server returns an error renders as expected 1`] = `
<Fragment>
  Some error
</Fragment>
`;

exports[`EventList when the server returns data and the user has events renders as expected 1`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(ListItem))
    key="1"
  >
    <WithStyles(Event)
      eventId={1}
      location=""
      rsvpStatus="NONE"
      startTime={1970-01-01T00:00:02.000Z}
      teamId={1}
      teamPhotoUrl="url"
      title="test"
    />
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`EventList when the server returns data and the user has no events renders as expected 1`] = `
<Fragment>
  No events scheduled
</Fragment>
`;

exports[`EventList when the server returns data renders as expected 1`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(ListItem))
    key="1"
  >
    <WithStyles(Event)
      eventId={1}
      location="test location"
      locationMapsUrl="url"
      rsvpStatus="NONE"
      startTime={1970-01-01T00:00:02.000Z}
      teamId={1}
      teamPhotoUrl="url"
      title="test"
    />
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`EventList when the server returns data when the event has a location renders as expected 1`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(ListItem))
    key="1"
  >
    <WithStyles(Event)
      eventId={1}
      location="test location"
      locationMapsUrl="url"
      rsvpStatus="NONE"
      startTime={1970-01-01T00:00:02.000Z}
      teamId={1}
      teamPhotoUrl="url"
      title="test"
    />
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`EventList when the server returns data when the event has no start time renders as expected 1`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(ListItem))
    key="1"
  >
    <WithStyles(Event)
      eventId={1}
      location="test location"
      locationMapsUrl="url"
      rsvpStatus="NONE"
      teamId={1}
      teamPhotoUrl="url"
      title="test"
    />
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`EventList when the server returns no data renders as expected 1`] = `
<Fragment>
  Some error
</Fragment>
`;
